Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43157

QWindowsVistaStyle::drawPrimitive(PE_PanelItemViewItem) doesn't work for custom widget

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.5.0
    • 5.4.0 RC
    • GUI: Painting
    • None
    • 936b671332d4742642f044e6ce61d2f46218155c (qtbase/dev, 12.1.2015, 5.5)

    Description

      QWindowsVistaStyle::drawPrimitive(PE_PanelItemViewItem) implementation requires passed widget is derived from QAbstractItemView class.

      This makes unusable this function for drawing custom widgets.

      I've attached a patch which fixes it.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-43157
          # Subject Branch Project Status CR V

          Activity

            People

              kleint Friedemann Kleint
              lexxmark Alex Zhondin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes