QWindowsVistaStyle: Draw PE_PanelItemViewItem for non-item view widgets.

Task-number: QTBUG-43157
Change-Id: I2a5f721cadc0dfffbb81902ef1d06ba34a729300
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>